navigationsLink geupdatet und Datatables nochmal

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,12 @@ General
 body {
     --s: 60px; /* Definition einer CSS-Variable für die Kopfhöhe */
     --_g: #0000 83%,#b09f79 85% 99%,#0000 101%; /* Definition einer CSS-Variable für den Hintergrund */
-    background:
+    background: 
       radial-gradient(27% 29% at right ,var(--_g)) calc(var(--s)/ 2) var(--s),
       radial-gradient(27% 29% at left  ,var(--_g)) calc(var(--s)/-2) var(--s),
       radial-gradient(29% 27% at top   ,var(--_g)) 0 calc(var(--s)/ 2),
       radial-gradient(29% 27% at bottom,var(--_g)) 0 calc(var(--s)/-2)
-      #476074; /* Erstellung eines Hintergrunds mit radialen Verläufen und Farbverläufen */
+      #476074; /* Erstellung eines Hintergrunds mit radialen Verläufen und Farbverläufen (Made by Benjamin Böhm) */
     background-size: calc(2*var(--s)) calc(2*var(--s)); /* Festlegung der Hintergrundgröße */
     
 }
@@ -242,6 +242,8 @@ Spiel // Snake
     margin: auto; /* Zentriere das Spielcanvas */
     display: block; /* Zeige das Spielcanvas als Blockelement an */
     margin-bottom: 10px; /* Unten 10px Abstand für das Spielcanvas */
+    
+    
     
 }
 
